--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>My Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="script.js">
 
